Updates to vascore.org/staff

--- a/public/_layouts/home.html
+++ b/public/_layouts/home.html
@@ -19,7 +19,7 @@
     <![endif]-->
 
     <!--[if gte IE 8]><!-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css" />
     <!-- <![endif]-->
 
@@ -96,16 +96,16 @@
                             <a href="bio_ido-weinberg.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
-                                        <div data-src="/images/photo_ido-weinberg@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+                                        <div data-src="/images/photo_ido-weinberg-2.jpg"></div>
+                                        <div data-src="/images/photo_ido-weinberg@2x-2.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
 
                                         <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
+                                        <div data-src="/images/photo_ido-weinberg-2.jpg"></div>
                                         <![endif]-->
 
                                         <!-- Fallback content for non-JS browsers. -->
                                         <noscript>
-                                            <img src="/images/photo_ido-weinberg.jpg" alt="" />
+                                            <img src="/images/photo_ido-weinberg-2.jpg" alt="" />
                                         </noscript>
                                     </div>
                                     <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">Medical Director</span></p></figcaption>
@@ -269,26 +269,6 @@
                     <div class="row">
 
                         <div class="ten columns">
-                            <a href="bio_sabina-dhami.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
-                                        <div data-src="/images/photo_sabina-dhami@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_sabina-dhami.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Sabina Dhami</span><span itemprop="jobTitle">Project Team Lead</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
-                        <div class="ten columns">
                             <a href="bio_ritu-shrestha.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -308,11 +288,6 @@
                                 </figure>
                             </a>
                         </div>
-
-                    </div>
-
-                    <div class="row">
-
                         <div class="ten columns">
                             <a href="bio_justin-thompson.html" class="reveal">
                                 <figure>
@@ -333,6 +308,12 @@
                                 </figure>
                             </a>
                         </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        
                         <div class="ten columns">
                             <a href="bio_luis-cintron.html" class="reveal">
                                 <figure>
@@ -353,9 +334,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
-
                         <div class="ten columns">
                             <a href="bio_brian-chung.html" class="reveal">
                                 <figure>
@@ -373,6 +351,50 @@
                                         </noscript>
                                     </div>
                                     <figcaption><p><span itemprop="name">Brian Chung</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+
+                        
+                        <div class="ten columns">
+                            <a href="bio_nicole-saulnier.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_noelle-saulnier.jpg"></div>
+                                        <div data-src="/images/photo_noelle-saulnier@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_noelle-saulnier.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_noelle-saulnier.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Nicole Saulnier</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                        <div class="ten columns">
+                            <a href="bio_anna-jones.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_anna-jones.jpg"></div>
+                                        <div data-src="/images/photo_anna-jones@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_anna-jones.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_anna-jones.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Anna Jones</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
