--- a/public/_layouts/publications.html
+++ b/public/_layouts/publications.html
@@ -19,7 +19,7 @@
     <![endif]-->
 
     <!--[if gte IE 8]><!-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/publications.css" />
     <!-- <![endif]-->
@@ -42,7 +42,7 @@
     <div class="masthead">
         <div class="row" role="banner">
             <div class="eight columns logo">
-                <a href="#intro">
+                <a href="/#intro">
                     <img src="/images/vascore-logo@2x.png" alt="Vascore" />
                 </a>
             </div>
