--- a/public/_layouts/home.html
+++ b/public/_layouts/home.html
@@ -796,7 +796,10 @@
         </div>
     </div>
 
-    <script src="js/script-min.js"></script>
+    <script src="js/jquery-1.8.2.js"></script>
+    <script src="js/jquery-ui-1.9.1.custom.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/script.js"></script>
 	<script type="text/javascript">
 
 	  var _gaq = _gaq || [];
