--- a/public/_layouts/home.html
+++ b/public/_layouts/home.html
@@ -21,6 +21,15 @@
     <!--[if gte IE 8]><!-->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css" />
+    <style type="text/css">
+        .modalcontent a {
+            color: rgb(116, 185, 193);
+            text-decoration: none;
+        }
+            .modalcontent a:hover {
+                color: rgb(246, 153, 7);
+            }
+    </style>
     <!-- <![endif]-->
 
     <meta name="viewport" content="width=device-width" />
@@ -359,7 +368,7 @@
 
                         
                         <div class="ten columns">
-                            <a href="bio_nicole-saulnier.html" class="reveal">
+                            <a href="bio_noelle-saulnier.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
                                         <div data-src="/images/photo_noelle-saulnier.jpg"></div>
@@ -374,7 +383,7 @@
                                             <img src="/images/photo_noelle-saulnier.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Nicole Saulnier</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Noelle Saulnier</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
