name/title edits

--- a/public/_layouts/home.html
+++ b/public/_layouts/home.html
@@ -153,7 +153,7 @@
                                         </noscript>
                                     </div>
                                     <figcaption>
-                                        <p><span itemprop="name">Corinne Payette-Raftery, <span itemprop="honorificSuffix">BS</span>, <span itemprop="honorificSuffix">RVT</span>, <span itemprop="honorificSuffix">RPhs</span></span> <span itemprop="jobTitle">Technical Director</span></p>
+                                        <p><span itemprop="name">Corinne Payette-Raftery, <span itemprop="honorificSuffix">BS</span>, <span itemprop="honorificSuffix">RVT</span>, <span itemprop="honorificSuffix">RPhS</span></span> <span itemprop="jobTitle">Technical Director</span></p>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -215,7 +215,7 @@
                                         </noscript>
                                     </div>
                                     <figcaption>
-                                        <p><span itemprop="name">Nilay Patel</span><span itemprop="jobTitle">Director of Coronary Intravascular Imaging</span></p>
+                                        <p><span itemprop="name">Nilay Patel, MD</span><span itemprop="jobTitle">Director of Coronary Intravascular Imaging</span></p>
                                     </figcaption>
                                 </figure>
                             </a>
