--- a/public/_layouts/home.html
+++ b/public/_layouts/home.html
@@ -223,6 +223,26 @@
                     </div>
                     <div class="row">
                         <div class="ten columns">
+                            <a href="bio_justin-thompson.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_placeholder@2x.png"></div>
+                                        <div data-src="/images/photo_placeholder@2x.png" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_placeholder@2x.png"></div>
+                                        <![endif]-->
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_placeholder@2x.png" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption>
+                                        <p><span itemprop="name">Justin Thompson, <span itemprop="honorificSuffix">MBA</span></span><span itemprop="jobTitle">Administrative Manager</span></p>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                        <div class="ten columns">
                             <a href="bio_sandra-croteau.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -242,6 +262,8 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_victoria-sova.html" class="reveal">
                                 <figure>
@@ -262,8 +284,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_kathryn-lane.html" class="reveal">
                                 <figure>
@@ -284,6 +304,8 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
@@ -304,8 +326,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_ritu-shrestha.html" class="reveal">
                                 <figure>
@@ -326,6 +346,8 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_luis-cintron.html" class="reveal">
                                 <figure>
@@ -346,8 +368,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_brian-chung.html" class="reveal">
                                 <figure>
@@ -368,6 +388,8 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_catherine-galpin.html" class="reveal">
                                 <figure>
